# FinSight_AI

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
frontend/: app.py
src/agents/: agents.py  crew.py  tasks.py
src/agents/tools/: financial.py  scraper.py
src/api/: main.py  models.py  routes.py
src/shared/: config.py  database.py  storage.py
