[project]
name = "finsight-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "crewai>=1.14.4",
    "crewai-tools>=1.14.4",
    "fastapi>=0.136.1",
    "firecrawl-py>=4.24.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
]
